# dotget

./: README.md  pyproject.toml
src/: __init__.py  dotget.py
