[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dotget"
version = "0.1.0"
authors = [
  { name="Alex Towell", email="lex@metafunctor.com" },
]
description = "Simple, exact addressing for nested data. Nothing more."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]
dependencies = ["PyYAML>=5.0"]

[project.urls]
Homepage = "https://github.com/user/dotget"

[project.scripts]
dotget = "dotget.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dotget"]
